First commit with diagnostics;  may not run, or even compile yet!

--- a/applications/metric/2d/sphere/Makefile.am
+++ b/applications/metric/2d/sphere/Makefile.am
@@ -1,16 +1,29 @@
 ## Makefile.am in applications/metric/2d/sphere
 
-bin_PROGRAMS += applications/metric/2d/sphere/sphere
+bin_PROGRAMS += applications/metric/2d/sphere/metric
 
 
-applications_metric_2d_sphere_sphere_SOURCES = \
-	applications/metric/2d/sphere/sphere_user.cpp \
-	applications/metric/2d/sphere/sphere.cpp \
-	applications/metric/2d/sphere/ghost_twopatch.f \
+applications_metric_2d_sphere_metric_SOURCES = \
+	applications/metric/2d/sphere/metric_user.cpp \
+	applications/metric/2d/sphere/metric.cpp \
 	applications/metric/2d/sphere/tag4refinement.f \
-	applications/metric/2d/sphere/output_metric.f \
-	applications/metric/2d/sphere/mapc2m.f \
-	applications/metric/2d/sphere/setprob.f
+	applications/metric/2d/sphere/metric_output.f \
+	applications/metric/2d/sphere/metric_check.f \
+	applications/metric/2d/sphere/setprob.f \
+	applications/metric/2d/sphere/fclaw2d_map_nomap.c \
+	applications/metric/2d/sphere/fclaw2d_map_cart.c \
+	applications/metric/2d/sphere/fclaw2d_map_fivepatch.c \
+	applications/metric/2d/sphere/fclaw2d_map_pillowdisk.c \
+	applications/metric/2d/sphere/fclaw2d_map_pillowdisk5.c \
+	applications/metric/2d/sphere/fclaw2d_map_squareddisk.c
 
-applications_metric_2d_sphere_sphere_FFLAGS = \
-	$(AM_FFLAGS) -I@top_srcdir@/src/fortran_source2d
+applications_advection_2d_metric_metric_CPPFLAGS = \
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+
+
+# applications_advection_2d_metric_metric_CPPFLAGS += -D TRAPFPE
+
+# applications_advection_2d_metric_metric_CPPFLAGS += -D MPI_DEBUG
+
+
+applications_sphere_metric_LDADD = $(LDADD) $(FLIBS)
