Adding metric example;  may not run yet

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -13,6 +13,7 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 include applications/dummy/Makefile.am
 include applications/no_solver/Makefile.am
 include applications/test_parms/Makefile.am
+include applications/metric/2d/sphere/Makefile.am
 
 # Scalar advection examples
 include applications/advection/2d/swirl_fivepatch/Makefile.am
