A bunch of files weren't added because I had 'metric' in my info/exclude file!

--- a/applications/metric/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/metric/2d/sphere/fclaw2d_defaults.ini
@@ -1,11 +1,12 @@
 [Options]
-     mx = 64		  # mx_leaf
-     my = 64             # my_leaf
+     mx = 128 		  # mx_leaf
+     my = 128              # my_leaf
 
      serialout = T
+     run_diagnostics = F
 
-     minlevel = 5         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 0         # Maximum levels of refinement
      regrid_interval = 10  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
@@ -28,5 +29,3 @@
      manifold = T         # Manifold
 
      subcycle = T         # subcycle in time ( = T or F).
-
-     check_conservation = F
