Don't divide by dx*dy each time!

--- a/applications/metric/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/metric/2d/sphere/fclaw2d_defaults.ini
@@ -3,10 +3,10 @@
      my = 128              # my_leaf
 
      serialout = T
-     run_diagnostics = F
+     run_diagnostics = T
 
-     minlevel = 0         # Minimum level
-     maxlevel = 0         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 1         # Maximum levels of refinement
      regrid_interval = 10  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
