Fix merge conflicts

--- a/applications/metric/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/metric/2d/sphere/fclaw2d_defaults.ini
@@ -1,27 +1,28 @@
 [Options]
-     mx = 128 		  # mx_leaf
-     my = 128              # my_leaf
+     example = 1
+     mx = 16 		   # mx_leaf
+     my = 16             # my_leaf
 
      serialout = T
      run_diagnostics = T
 
      minlevel = 1         # Minimum level
      maxlevel = 1         # Maximum levels of refinement
-     regrid_interval = 10  # Regrid every 'regrid_interval' time steps.
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 1            # Used for all three out styles;  has different meaning, though.
+     nout = 1             # Used for all three out styles;  has different meaning, though.
      tfinal = 1.0         #
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.02   # Initial time step for 'minlevel'
+     initial_dt = 0.02    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 1.0    # desired cfl
 
      verbosity = 0        # verbose
 
-     meqn = 1             # meqn
+     meqn = 3             # meqn
 
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
