Adding files to slotted disk example

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -22,3 +22,4 @@ include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
 include applications/advection/2d/filament/Makefile.am
 include applications/advection/2d/torus/Makefile.am
+include applications/NCAR_transport/slotted_disk
