--- a/applications/NCAR_transport/slotted_disk/fclaw2d_defaults.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw2d_defaults.ini
@@ -2,10 +2,10 @@
      mx = 16		  # mx_leaf
      my = 16              # my_leaf
 
-     serialout = F
+     serialout = T
 
-     minlevel = 3         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
