--- a/Makefile.apps
+++ b/Makefile.apps
@@ -22,4 +22,5 @@ include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
 include applications/advection/2d/filament/Makefile.am
 include applications/advection/2d/torus/Makefile.am
-include applications/NCAR_transport/slotted_disk
+include applications/NCAR_transport/slotted_disk/Makefile.am
+include applications/euler/2d/quadrants/Makefile.am
