--- a/applications/euler/2d/quadrants/fclaw2d_clawpack.ini
+++ b/applications/euler/2d/quadrants/fclaw2d_clawpack.ini
@@ -5,4 +5,4 @@
      src_term = 0         # src_term
 
      mwaves = 4           # mwaves
-     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
+     mthlim = 4 4 4 4     # mthlim (is a vector in general, with 'mwaves' entries)
