--- a/applications/euler/2d/quadrants/fclaw2d_defaults.ini
+++ b/applications/euler/2d/quadrants/fclaw2d_defaults.ini
@@ -2,14 +2,16 @@
      mx = 16		  # mx_leaf
      my = 16               # my_leaf
 
-     minlevel = 0         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     serialout = T
+
+     minlevel = 2         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 0.8         #
 
-     nout = 4            # Used for all three out styles;  has different meaning, though.
+     nout = 100            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
@@ -20,7 +22,7 @@
      meqn = 4             # meqn
 
      mbc = 2              # mbc
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+     mthbc = 3 3 3 3      # mthbc(1) (left edge), etc.
 
 #    Leave these as general parameters, since they may be used by several
 #    hyperbolic solvers
