Mapped swirl example fixes to get rid of set_block

--- a/applications/advection/2d/swirl_fivepatch/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl_fivepatch/fclaw2d_defaults.ini
@@ -1,9 +1,9 @@
 [Options]
-     example = 1         # 1=Cartesian mapping; 2=five patch mapping
-     mx = 8		 # mx_leaf
-     my = 8              # my_leaf
+     example = 3         # 1=identity; 2=Cartesian mapping; 3=five patch mapping
+     mx = 8
+     my = 8
 
-     serialout = T
+     serialout = T        # ascii output
 
      subcycle = T         # subcycle in time ( = T or F).
 
