Fix slotted_disk so it doesn't require the get_block function

--- a/applications/NCAR_transport/slotted_disk/fclaw2d_defaults.ini
+++ b/applications/NCAR_transport/slotted_disk/fclaw2d_defaults.ini
@@ -1,6 +1,7 @@
 [Options]
-     mx = 16		  # mx_leaf
-     my = 16              # my_leaf
+     example = 2
+     mx = 8		  # mx_leaf
+     my = 8              # my_leaf
 
      serialout = T
 
