Getting rid of call to set_block

--- a/src/solvers/fclaw2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fclaw2d_clawpack4.6/Makefile.am
@@ -27,6 +27,7 @@ libclawpack4_6_compiled_sources = \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/b4step2.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/setaux.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/src2.f \
+	src/solvers/fclaw2d_clawpack4.6/fortran_source/block.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/corner_info.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/bc2.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/flux2.f \
