--- a/Makefile.apps
+++ b/Makefile.apps
@@ -16,10 +16,14 @@ include applications/test_parms/Makefile.am
 include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection examples
+
 include applications/advection/2d/swirl_fivepatch/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
 include applications/advection/2d/filament/Makefile.am
 include applications/advection/2d/torus/Makefile.am
+
+# NCAR Transport problems
 include applications/NCAR_transport/slotted_disk/Makefile.am
+include applications/NCAR_transport/correlatedcb/Makefile.am
