Changes to cosine bell diagnostics

--- a/applications/NCAR_transport/correlatedcb/fclaw2d_clawpack.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw2d_clawpack.ini
@@ -4,5 +4,5 @@
      maux = 3             # maux
      src_term = 0         # src_term
 
-     mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
+     mwaves = 2           # mwaves
+     mthlim = 3 3           # mthlim (is a vector in general, with 'mwaves' entries)
