--- a/applications/NCAR_transport/correlatedcb/fclaw2d_defaults.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw2d_defaults.ini
@@ -1,6 +1,8 @@
 [Options]
-     mx = 16		  # mx_leaf
-     my = 16              # my_leaf
+     example = 2          # 1=pillowsphere; 2=cubed sphere
+
+     mx = 16		  # mx
+     my = 16              # my
 
      serialout = T
 
@@ -14,7 +16,7 @@
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.02   # Initial time step for 'minlevel'
+     initial_dt = 0.02    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -31,21 +33,3 @@
      subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
-
-# ----------------------------------------------------------------------------------
-# All output styles below can use either a fixed time step or a variable time step.
-
-[OutputStyle_1]
-# Create nout+1 output files at times  [0,dT_out, 2*dT_out, ..., tfinal], where dT_out = tfinal/nout
-     nout = 10
-     tfinal = 4.0
-
-[OutputStyle_2]
-# Create nout+1 output files at times specified in t_out (T=0 file included by default)
-  nout = 6
-  tout = 0.1 0.34 0.5 0.89 1.1 2.1;
-
-[OutputStyle_3]
-# Output every nstep time steps, for nout total time steps.  Note that nstep must divide nout.
-  nstep = 1
-  nout = 5
