Reinstate CHECK_HEADERS for fenv, signal
This should not change anything since the #defines created
are not used in the code.  It's useful to look at fclaw_config.h
files generated on different platforms.

--- a/configure.ac
+++ b/configure.ac
@@ -47,7 +47,7 @@ echo "o---------------------------------------"
 echo "| Checking headers"
 echo "o---------------------------------------"s
 
-dnl AC_CHECK_HEADERS([fenv.h signal.h])
+AC_CHECK_HEADERS([fenv.h signal.h])
 
 echo "o---------------------------------------"
 echo "| Checking functions"
