--- a/applications/advection/2d/torus/fclaw2d_defaults.ini
+++ b/applications/advection/2d/torus/fclaw2d_defaults.ini
@@ -11,18 +11,18 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 1        # Minimum level
-     maxlevel = 1         # Maximum levels of refinement
+     minlevel = 0        # Minimum level
+     maxlevel = 0         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 4.0         #
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nout = 64            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.005   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 0.05   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
 
