--- a/applications/metric/2d/all_mappings/Makefile.am
+++ b/applications/metric/2d/all_mappings/Makefile.am
@@ -23,13 +23,9 @@ applications_metric_2d_all_mappings_metric_SOURCES = \
 	applications/metric/2d/all_mappings/fclaw2d_map_cubedsphere.c \
 	applications/metric/2d/all_mappings/fclaw2d_map_torus.c
 
-applications_advection_2d_metric_metric_CPPFLAGS = \
-        $(AM_CPPFLAGS)
+# applications_metric_2d_all_mappings_metric_CPPFLAGS = \
+#        $(AM_CPPFLAGS)
 
+# applications_metric_2d_all_mappings_metric_CPPFLAGS += -D MPI_DEBUG
 
-# applications_advection_2d_metric_metric_CPPFLAGS += -D TRAPFPE
-
-# applications_advection_2d_metric_metric_CPPFLAGS += -D MPI_DEBUG
-
-
-applications_all_mappings_metric_LDADD = $(LDADD) $(FLIBS)
+# applications_metric_2d_all_mappings_metric_LDADD = $(LDADD) $(FLIBS)
