Adding lat/long example

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -50,6 +50,7 @@ libforestclaw_compiled_sources = \
 	src/mappings/pillowsphere/mapc2m_pillowsphere.f \
 	src/mappings/fivepatch/mapc2m_fivepatch.f \
 	src/mappings/torus/mapc2m_torus.f \
+	src/mappings/latlong/mapc2m_latlong.f \
 	src/mappings/pillowsphere/pillowsphere_corner_ghost.f \
 	src/fclaw2d_diagnostics.cpp \
 	src/clawpack_fort.cpp \
