Added extern 'C' to all mapping context functions

--- a/applications/advection/2d/swirl_mapped/Makefile.am
+++ b/applications/advection/2d/swirl_mapped/Makefile.am
@@ -26,7 +26,7 @@ applications_advection_2d_swirl_mapped_swirl_SOURCES = \
 applications_advection_2d_swirl_mapped_swirl_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
 
-# applications_advection_2d_swirl_mapped_swirl_CPPFLAGS += -D TRAPFPE
+applications_advection_2d_swirl_mapped_swirl_CPPFLAGS += -D TRAPFPE
 
 # applications_advection_2d_swirl_mapped_swirl_CPPFLAGS += -D MPI_DEBUG
 
