Added the brick as a field in the torus mappings

--- a/applications/advection/2d/torus/Makefile.am
+++ b/applications/advection/2d/torus/Makefile.am
@@ -6,6 +6,7 @@ applications_advection_2d_torus_torus_SOURCES = \
 	applications/advection/2d/torus/torus_user.cpp \
 	applications/advection/2d/torus/torus.cpp \
 	applications/advection/2d/torus/fclaw2d_map_cart.c \
+	applications/advection/2d/torus/fclaw2d_map_annulus.c \
 	applications/advection/2d/torus/fclaw2d_map_torus.c \
 	applications/advection/2d/torus/fclaw2d_map_latlong.c \
 	applications/advection/2d/torus/fclaw2d_map_brick.c \
