--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -4,25 +4,25 @@
      theta = 0
      phi = 0
 
-     mx = 16
-     my = 16		# my_leaf
+     mx = 64
+     my = 64		# my_leaf
 
      serialout = T
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 8.0           #
 
-     nout = 32            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     nout = 16000            # Used for all three out styles;  has different meaning, though.
+     nstep = 500            # Only used if outstyle is 3
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 5e-3   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 5e-04   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
 
