Changes to input

--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -15,13 +15,14 @@
      maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 8.0           #
 
-     nout = 16000            # Used for all three out styles;  has different meaning, though.
+     nout = 32
+     # nout = 16000            # Used for all three out styles;  has different meaning, though.
      nstep = 500            # Only used if outstyle is 3
 
-     use_fixed_dt = T     # Take a fixed time step
+     use_fixed_dt = F     # Take a fixed time step
      initial_dt = 5e-04   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
