--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "sc"]
 	path = sc
-	url = git@github.com:cburstedde/libsc.git
+        url = https://github.com/cburstedde/libsc.git
+	# url = git@github.com:cburstedde/libsc.git
+
 [submodule "p4est"]
 	path = p4est
-	url = git@github.com:cburstedde/p4est.git
+        url = https://github.com/cburstedde/p4est.git
+	# url = git@github.com:cburstedde/p4est.git
