Add brick connectivity to Cartesian mapping

--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -1,6 +1,14 @@
 [Options]
 
-     example = 4
+     example = 1        # 0 no mapping
+                        # 1 Cartesian (with brick)
+                        # 2 pillow disk
+                        # 3 squared disk
+			# 4 pillow five patch
+
+     mi = 4             # Brick dimensions (used in Cartesian mapping)
+     mj = 4
+
      theta = 0
      phi = 0
 
@@ -11,7 +19,7 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 2         # Minimum level
+     minlevel = 0         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
