Add brick mapping to src;  modify map_destroy to destroy brick mapping

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,6 +37,7 @@ libforestclaw_compiled_sources = \
 	src/fclaw2d_transform.c \
 	src/fclaw2d_map_query.c \
 	src/fp_exception_glibc_extension.c \
+	src/fclaw2d_map_brick.c \
 	src/mappings/context.f \
 	src/mappings/scale_rot_map.f \
 	src/mappings/map_query.f \
