Make the torus the default app

--- a/applications/advection/2d/torus/fclaw2d_defaults.ini
+++ b/applications/advection/2d/torus/fclaw2d_defaults.ini
@@ -1,10 +1,11 @@
 [Options]
 
-     example = 2
+     example = 2       # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
+
      theta = 0
      phi = 0
 
-     mi = 18
+     mi = 20
      mj = 3
      mx = 8
      my = 8		# my_leaf
@@ -17,10 +18,10 @@
      maxlevel = 3        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 4.0         #
 
-     nout = 2            # Used for all three out styles;  has different meaning, though.
+     nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
