--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -1,6 +1,6 @@
 [Options]
 
-     example = 1        # 0 no mapping
+     example = 3        # 0 no mapping
                         # 1 Cartesian (with brick)
                         # 2 pillow disk
                         # 3 squared disk
@@ -12,14 +12,14 @@
      theta = 0
      phi = 0
 
-     mx = 8
-     my = 8		# my_leaf
+     mx = 16
+     my = 16		# my_leaf
 
      serialout = T
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 0         # Minimum level
+     minlevel = 1         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
@@ -27,13 +27,14 @@
      tfinal = 8.0           #
 
      nout = 32
-     # nout = 16000            # Used for all three out styles;  has different meaning, though.
-     nstep = 500            # Only used if outstyle is 3
+     nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 5e-04   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
+
+     trapfpe = T       # Trap floating point errors
 
      ax = 0
      bx = 2
