Update examples to include runtime option to trap floating point errors

--- a/applications/advection/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/sphere/fclaw2d_defaults.ini
@@ -25,6 +25,7 @@
      desired_cfl = 0.9    # desired cfl
 
      verbosity = 0        # verbose
+     trapfpe = T          # Trap floating point exceptions
 
      meqn = 1             # meqn
 
