--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -20,6 +20,7 @@
      initial_dt = 0.005   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
+     trapfpe = T          # Trap floating point errors.
 
      meqn = 1             # meqn
 
