--- a/applications/advection/2d/swirl_mapped/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl_mapped/fclaw2d_defaults.ini
@@ -1,7 +1,7 @@
 [Options]
-     example = 2         # 1=identity; 2=Cartesian mapping; 3=five patch mapping
-     mx = 16
-     my = 16
+     example = 3         # 1=identity; 2=Cartesian mapping; 3=five patch mapping
+     mx = 8
+     my = 8
 
      mi = 4
      mj = 4
@@ -10,8 +10,8 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 0         # Minimum level
-     maxlevel = 3         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
@@ -24,6 +24,7 @@
      initial_dt = 0.005   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
+     trapfpe = T          # Trap floating point exceptions
 
      meqn = 1             # meqn
 
