--- a/applications/advection/2d/torus/fclaw2d_defaults.ini
+++ b/applications/advection/2d/torus/fclaw2d_defaults.ini
@@ -29,6 +29,8 @@
 
      verbosity = 0        # verbose
 
+     trapfpe = T          # trap floating point exceptions
+
      ax = 0
      bx = 2
      ay = 0
