--- a/applications/metric/2d/all_mappings/fclaw2d_defaults.ini
+++ b/applications/metric/2d/all_mappings/fclaw2d_defaults.ini
@@ -11,6 +11,7 @@
      maxlevel = 0         # Maximum levels of refinement
 
      verbosity = 0        # verbose
+     trapfpe = T          # Trap floating point exceptions
 
      meqn = 3             # meqn
 
