--- a/applications/test_parms/fclaw2d_defaults.ini
+++ b/applications/test_parms/fclaw2d_defaults.ini
@@ -17,6 +17,7 @@
      initial_dt = 0.005   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
+     trapfpe = T          # Trap floating point exceptions
 
      meqn = 1             # meqn
 
