--- a/applications/NCAR_transport/correlatedcb/fclaw2d_defaults.ini
+++ b/applications/NCAR_transport/correlatedcb/fclaw2d_defaults.ini
@@ -21,6 +21,7 @@
      desired_cfl = 0.9    # desired cfl
 
      verbosity = 0        # verbose
+     trapfpe = T          # Trap floating point exceptions
 
      meqn = 2             # meqn
 
