--- a/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
@@ -1,6 +1,6 @@
 [Options]
 
-     example = 1
+     example = 2
      theta = 0
 
      mx = 8		  # mx_leaf
@@ -8,8 +8,8 @@
 
      serialout = T
 
-     minlevel = 2         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 1         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
@@ -23,6 +23,8 @@
      desired_cfl = 0.9    # desired cfl
 
      verbosity = 0        # verbose
+
+     trapfpe = T          # trap floating point exceptions
 
      meqn = 1             # meqn
 
