Add files which will eventually replace amr_options.{c.h}   -- Use new way of checking parms   -- Clean up some unused functions (that were mostly #if-zeroed out)   -- Change name space so that all options related parameters and functions start with fclaw2d (although maybe this should be      changed to just 'fclaw'? )

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -29,6 +29,7 @@ libforestclaw_internal_headers = \
 libforestclaw_compiled_sources = \
 	src/fclaw_base.c \
 	src/amr_options.c \
+	src/fclaw2d_options.c \
 	src/fclaw2d_base.c \
 	src/forestclaw2d.c \
 	src/fclaw2d_convenience.c \
