Use [Sections] in .ini file;  process .ini file only once; use return values from file and command line parsing

--- a/applications/test_parms/fclaw2d_defaults.ini
+++ b/applications/test_parms/fclaw2d_defaults.ini
@@ -1,13 +1,20 @@
-[Options]
+[main]
+     example = 1
+     trapfpe = F
+     mpi_debug = T
 
-     mx = 32		  # mx_leaf
-     my = 32              # my_leaf
+
+[Options]
+    # [Options] is a default section;  parameters are not prefaced with
+
+     mx = 16		  # mx_leaf
+     my = 16               # my_leaf
 
      minlevel = 0         # Minimum level
      maxlevel = 2         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 4.0         #
 
      nout = 2             # Used for all three out styles;  has different meaning, though.
@@ -17,21 +24,43 @@
      initial_dt = 0.005   # Initial time step for 'minlevel'
 
      verbosity = 0        # verbose
-     trapfpe = T          # Trap floating point exceptions
 
      meqn = 1             # meqn
 
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
-#    Leave these as general parameters, since they may be used by several
-#    hyperbolic solvers
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = F         # Manifold
+     manifold = 0         # Manifold
      mapped = F
 
      subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
+
+[mapping]
+    mi = 1       # Dimensions of the brick
+    mj = 5
+
+    phi = 45.1   # Angles for rotation in 3d : theta rotates about x; phi about z
+    theta = 6.2
+
+    scale_x = 1.0
+    scale_y = 1.0
+    scale_z = 3.0
+
+    shift_x = 4.5
+    shift_y = 1.2
+    shift_z = 4.3
+
+[clawpack46]
+    # Clawpack parameters
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 2             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
