Matlab : Fix cart mapping;  default setting is torus

--- a/applications/test_parms/fclaw_options.ini
+++ b/applications/test_parms/fclaw_options.ini
@@ -5,7 +5,7 @@
 
 
 [Options]
-    # [Options] is a default section;  parameters are not prefaced with
+    # [Options] is a default section;  parameters are not prefaced with section name.
 
      mx = 16		  # mx_leaf
      my = 16               # my_leaf
