--- a/applications/test_parms/fclaw_options.ini
+++ b/applications/test_parms/fclaw_options.ini
@@ -1,11 +1,22 @@
+# To override these values, use either the command line, or a second file :
+#
+#     % test_parms --main:example=2 --trapfpe=T
+# or
+#     % test_parms -F example2.ini
+#
+# or
+#     % test_parms --inifile=example2.ini
+#
+
 [main]
      example = 1
-     trapfpe = F
-     mpi_debug = T
-
+     test_array = 1.2 -4.56 6.44 1e-10
 
 [Options]
     # [Options] is a default section;  parameters are not prefaced with section name.
+
+     trapfpe = F
+     mpi_debug = T
 
      mx = 16		  # mx_leaf
      my = 16               # my_leaf
@@ -34,7 +45,6 @@
      desired_cfl = 0.9    # desired cfl
 
      manifold = 0         # Manifold
-     mapped = F
 
      subcycle = T         # subcycle in time ( = T or F).
 
@@ -47,13 +57,9 @@
     phi = 45.1   # Angles for rotation in 3d : theta rotates about x; phi about z
     theta = 6.2
 
-    scale_x = 1.0
-    scale_y = 1.0
-    scale_z = 3.0
+    scale = 1.0 1.0 1.0
 
-    shift_x = 4.5
-    shift_y = 1.2
-    shift_z = 4.3
+    shift = 0 0 0
 
 [clawpack46]
     # Clawpack parameters
