--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -1,18 +1,14 @@
+[main]
 # This is the default example (example 2 = torus)
 
-[main]
      example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
      alpha = 0.4          # Ratio of outer radius to inner radius (Torus)
 
 [Options]
-     trapfpe = T          # trap floating point exceptions
-     mpi_debug = F
-
      mx = 8
      my = 8		# my_leaf
 
      serialout = T
-
      subcycle =  T      # subcycle in time ( = T or F).
 
      minlevel = 0        # Minimum level
@@ -41,6 +37,11 @@
      manifold = T         # Manifold
 
      check_conservation = T
+     run_diagnostics = F
+
+     trapfpe = T          # trap floating point exceptions
+     mpi_debug = F
+
 
 [mapping]
     mi = 20                # Dimensions of the brick for torus
