Add example of how to load array options

--- a/applications/test_parms/example2.ini
+++ b/applications/test_parms/example2.ini
@@ -1,5 +1,8 @@
 [main]
      example = 2
+     frames = 4 5
+     density = 1000.1 14.56
+
 
 [Options]
      trapfpe = T
@@ -9,5 +12,5 @@
      mi = 13
      mj = 10
 
-     scale = 23.4 0.000045 1e-10
-     shift = -1.23 -11.567  3.14159
+     scale = 1.5 2 1
+     shift = 2.5 3 0
