--- a/Makefile.apps
+++ b/Makefile.apps
@@ -12,14 +12,14 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 # Simple examples that don't do anything
 include applications/dummy/Makefile.am
 include applications/no_solver/Makefile.am
-include applications/test_parms/Makefile.am
+# include applications/test_parms/Makefile.am
 include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection examples
 include applications/advection/2d/swirl_mapped/Makefile.am
-include applications/advection/2d/swirl/Makefile.am
+# include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
-include applications/advection/2d/sphere/Makefile.am
+# include applications/advection/2d/sphere/Makefile.am
 include applications/advection/2d/filament/Makefile.am
 include applications/advection/2d/torus/Makefile.am
 
