--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -1,61 +1,71 @@
+# -----------------------------------------------------------
+# Options set for a particular example in main.
+# -----------------------------------------------------------
 [main]
 # This is the default example (example 2 = torus)
 
      example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
      alpha = 0.4          # Ratio of outer radius to inner radius (Torus)
 
+# -----------------------------------------------------------
+# Basic ForestClaw options
+# -----------------------------------------------------------
 [Options]
      mx = 8
-     my = 8		# my_leaf
+     my = 8		  # my_leaf
+     mbc = 2              # mbc
 
-     serialout = T
-     subcycle =  T      # subcycle in time ( = T or F).
-
-     minlevel = 0        # Minimum level
-     maxlevel = 3        # Maximum levels of refinement
+# Regridding options
+     minlevel = 0         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+# Time stepping
+     subcycle =  T        # subcycle in time ( = T or F).
+
      tfinal = 4.0         #
 
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
-
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.05   # Initial time step for 'minlevel'
-
-     verbosity = 0        # verbose
-
-     meqn = 1             # meqn
-
-     mbc = 2              # mbc
-     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
-
+     initial_dt = 0.05    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = T         # Manifold
+# Equation info
+     meqn = 1             # meqn
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+# Diagnostics and debugging
      check_conservation = T
      run_diagnostics = F
-
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
+# Mapping options
+     manifold = T         # Manifold
 
-[mapping]
-    mi = 20                # Dimensions of the brick for torus
-    mj = 8                 # mj approx alpha*mi  (8 = 0.4*20)
+     mi = 20              # Dimensions of the brick for torus
+     mj = 8               # mj approx alpha*mi  (8 = 0.4*20)
 
-    periodic_x = 1
-    periodic_y = 1
+     periodic_x = 1
+     periodic_y = 1
 
-    scale = 1.0 1.0 1.0
-    shift = 0 0 0
+     scale = 1.0 1.0 1.0
+     shift = 0 0 0
 
-    theta = 0
-    phi = 0
+     theta = 0
+     phi = 0
 
+# File and console IO
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
+
+     verbosity = 0        # verbose
+     serialout = T
+
+# -----------------------------------------------------------
+# Package options
+# -----------------------------------------------------------
 [clawpack46]
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
