Formatting of the ini file;  got rid of mapping section

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -5,15 +5,17 @@
 # This is the default example (example 2 = torus)
 
      example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
-     alpha = 0.4          # Ratio of outer radius to inner radius (Torus)
+     alpha = 0.4          # Ratio of outer radius to inner radius (torus)
 
 # -----------------------------------------------------------
 # Basic ForestClaw options
 # -----------------------------------------------------------
 [Options]
-     mx = 8
-     my = 8		  # my_leaf
-     mbc = 2              # mbc
+
+# Grid dimensions
+     mx = 8               # Interior dimensions of each grid
+     my = 8		  #
+     mbc = 2              # Number of ghost cells.
 
 # Regridding options
      minlevel = 0         # Minimum level
@@ -40,6 +42,14 @@
      trapfpe = T          # trap floating point exceptions
      mpi_debug = F
 
+# File and console IO
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
+
+     verbosity = 0        # verbose
+     serialout = T
+
 # Mapping options
      manifold = T         # Manifold
 
@@ -54,14 +64,6 @@
 
      theta = 0
      phi = 0
-
-# File and console IO
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
-
-     verbosity = 0        # verbose
-     serialout = T
 
 # -----------------------------------------------------------
 # Package options
