'verbosity' should be set to silent, production, etc

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -47,7 +47,7 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-     verbosity = 0        # verbose
+     verbosity = production        # verbose
      serialout = T
 
 # Mapping options
