--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -23,6 +23,10 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
 # Time stepping
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     nstep = 1            # Only used if outstyle is 3
+
      subcycle =  T        # subcycle in time ( = T or F).
 
      tfinal = 4.0         #
@@ -43,9 +47,6 @@
      mpi_debug = F
 
 # File and console IO
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
 
      verbosity = production        # verbose
      serialout = T
@@ -56,8 +57,8 @@
      mi = 20              # Dimensions of the brick for torus
      mj = 8               # mj approx alpha*mi  (8 = 0.4*20)
 
-     periodic_x = 1
-     periodic_y = 1
+     periodic_x = T
+     periodic_y = T
 
      scale = 1.0 1.0 1.0
      shift = 0 0 0
