Add user section

--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------
 # Options set for a particular example in main.
 # -----------------------------------------------------------
-[main]
+[user]
 # This is the default example (example 2 = torus)
 
      example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
@@ -70,6 +70,7 @@
 # Package options
 # -----------------------------------------------------------
 [clawpack46]
+     claw_verbosity = 0
      order  = 2 2         # normal and transverse order
      mcapa = 1            # mcapa
      maux = 3             # maux
