Working on periodic examples;  cart still does not work!

--- a/applications/advection/2d/torus/example3_latlong.ini
+++ b/applications/advection/2d/torus/example3_latlong.ini
@@ -1,4 +1,4 @@
-[main]
+[user]
      example = 3          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
      longitude = 0 360
      latitude = -50 50
@@ -14,7 +14,6 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-[mapping]
     mi = 18               # Dimensions of the brick
     mj = 5                # mj  = mi*(lat[1]-lat[0])/(long[1]-long[0])=(
 
