--- a/applications/advection/2d/torus/example4_annulus.ini
+++ b/applications/advection/2d/torus/example4_annulus.ini
@@ -1,4 +1,4 @@
-[main]
+[user]
      example = 4          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
      beta = 0.4            # Inner radius (outer radius = 1.0
 
@@ -13,7 +13,6 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-[mapping]
     mi = 22       # Dimensions of the brick
     mj = 3
 
