Swirl : Updating option handling

--- a/applications/advection/2d/swirl/fclaw_options.ini
+++ b/applications/advection/2d/swirl/fclaw_options.ini
@@ -19,13 +19,13 @@
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.005   # Initial time step for 'minlevel'
 
-     verbosity = 0        # verbose
+     verbosity = production        # verbose
      trapfpe = T          # Trap floating point errors.
 
      meqn = 1             # meqn
 
      mbc = 2              # mbc
-     #     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
