--- a/Makefile.apps
+++ b/Makefile.apps
@@ -17,7 +17,7 @@ include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection examples
 include applications/advection/2d/swirl_mapped/Makefile.am
-# include applications/advection/2d/swirl/Makefile.am
+include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
 # include applications/advection/2d/sphere/Makefile.am
 include applications/advection/2d/filament/Makefile.am
