(torus) Works with new clawpack options

--- a/applications/advection/2d/torus/example2_torus.ini
+++ b/applications/advection/2d/torus/example2_torus.ini
@@ -1,4 +1,4 @@
-[main]
+[user]
      example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
 
 [Options]
@@ -12,7 +12,6 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-[mapping]
     mi = 20       # Dimensions of the brick
     mj = 8        # mj approx alpha*mi  (8 = 0.4*20)
 
