--- a/applications/advection/2d/torus/example1_cart.ini
+++ b/applications/advection/2d/torus/example1_cart.ini
@@ -1,4 +1,4 @@
-[main]
+[user]
      example = 1          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
 
 [Options]
@@ -12,7 +12,6 @@
      nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
-[mapping]
     mi = 5       # Dimensions of the brick
     mj = 5
 
