--- a/applications/advection/2d/torus/fclaw_options.ini
+++ b/applications/advection/2d/torus/fclaw_options.ini
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------
 # Options set for a particular example in main.
 # -----------------------------------------------------------
-[main]
+[user]
 # This is the default example (example 2 = torus)
 
      example = 2          # 1 = cart; 2 = torus; 3 = lat-long; 4 = annulus
@@ -54,8 +54,8 @@
 # Mapping options
      manifold = T         # Manifold
 
-     mi = 20              # Dimensions of the brick for torus
-     mj = 8               # mj approx alpha*mi  (8 = 0.4*20)
+     mi = 20       # Dimensions of the brick
+     mj = 8        # mj approx alpha*mi  (8 = 0.4*20)
 
      periodic_x = T
      periodic_y = T
