Fixed merge conflicts

--- a/applications/advection/2d/sphere/fclaw_options.ini
+++ b/applications/advection/2d/sphere/fclaw_options.ini
@@ -1,4 +1,4 @@
-[main]
+[user]
      example = 2          # 1 = pillowsphere;  2 = cubed_sphere
 
 [Options]
@@ -21,7 +21,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     verbosity = 0        # verbose
+     verbosity = production        # verbose
      trapfpe = T          # Trap floating point exceptions
      mpi_debug = F
 
