--- a/Makefile.apps
+++ b/Makefile.apps
@@ -20,7 +20,7 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
-# include applications/advection/2d/filament/Makefile.am
+include applications/advection/2d/filament/Makefile.am
 
 include applications/advection/2d/torus/Makefile.am
 
