--- a/Makefile.apps
+++ b/Makefile.apps
@@ -16,7 +16,7 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 # include applications/metric/2d/all_mappings/Makefile.am
 
 # Scalar advection examples
-# include applications/advection/2d/swirl_mapped/Makefile.am
+include applications/advection/2d/swirl_mapped/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
